public/sketch/project.css
@import './color.css';

html {
    min-height: 100vh;
}

body {
    box-sizing: border-box;
    font-family:
        SFMono-Regular,
        Menlo,
        Monaco,
        Consolas,
        "Liberation Mono",
        "Courier New",
        monospace;

    font-size: 16px;
    text-rendering: optimizeLegibility;
    margin: 0;
    padding: 0;
    height: 100vh;
    overflow: hidden;
    background: var(--color-bg);
}

::selection {
    color: var(--color-bg);
    background-color: var(--color-primary);
}

.screen-reader-text {
    display: none;
}

@media speech {
    .screen-reader-text {
        display: block;
    }
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
small,
blockquote,
a {
    color: var(--color-text);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 3rem 0 1.38rem;
    font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 900;
    line-height: 1.3;
}

h1 {
    margin-top: 0;
    font-size: 1.802rem;
}

h2 {
    font-size: 1rem;

    @media (min-width: 54rem) {
        font-size: 1.602rem;
    }
}

h3 {
    font-size: 1.424rem;
}

h4 {
    font-size: 1.266rem;
}

h5 {
    font-size: 1.125rem;
}

small,
.text_small {
    font-size: 0.889rem;
    color: var(--color-text);
}

.clearfix {
    display: table;
    clear: both;
    float: none;
}

a {
    color: var(--color-text);
}

a svg,
button svg {
    fill: var(--color-text);
}

a:hover,
button:hover {
    color: var(--color-primary);
}

a:hover svg,
button:hover svg {
    fill: var(--color-primary);
}

/**
 * Iconav
 * -----------------------------------------------------
 */

nav#iconav {
    position: absolute;
    left: 0;
    padding: 0;
    bottom: .5rem;
    height: 3rem;
    width: 100vw;
    border: none;
    z-index: 10;
    transform: translate(0, 0);
    transition: transform 0.15s ease-in-out;
}

@media (min-width: 54rem) {
    nav#iconav {
        position: absolute;
        top: 0;
        bottom: auto;
        width: 4rem;
        height: 6rem;
    }
}

nav#iconav ul {
    padding: 0;
    margin: 0;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-around;
    list-style-type: none;
}

@media (min-width: 54rem) {
    nav#iconav ul {
        flex-flow: column nowrap;
        justify-content: stretch;
        width: 4rem;
    }

}

nav#iconav button {
    display: block;
    margin: 0.5rem;
    padding: 0.5rem;
    width: 1.5rem;
    height: 1.5rem;
    line-height: 1rem;
    text-align: center;
    text-decoration: none;
    background-color: var(--color-bg);
    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
}

nav#iconav button svg {
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
    fill: var(--color-text);
    opacity: 1;
}

nav#iconav button:hover svg {
    fill: var(--color-primary);
}

body.openedOffWindow nav#iconav ul li button[data-action='openOffFrame'] {
    background: var(--color-primary);
    color: var(--color-bg);
}

body.openedOffWindow nav#iconav ul li button[data-action='openOffFrame'] svg {
    fill: var(--color-bg);
}

/**
 * OffFrame
 * -----------------------------------------------------
 */

#windowFrame {
    position: relative;
    width: 100vw;
    transition: transform 0.25s ease-in-out;
}

#offFrame {
    position: absolute;
    height: 100vh;
    width: 100vw;
    max-width: 100vw;
    overflow-y: auto;
    transform: translate(0, 100vh);
    background: var(--color-bg);
    opacity: 0.8;
    z-index: 2;
    transition: transform 0.15s ease-in-out;
}

#offFrame>div {
    max-height: calc(100vh - 125px);
    overflow-y: auto;
}

@media (min-width: 54rem) {
    #offFrame {
        height: 100vh;
        width: 300px;
        max-width: 300px;
        transform: translate(-300px, 0);
        background: var(--color-bg);
    }

}

#offFrame>div {
    opacity: 1;
}

#offFrame #projectTitle,
#offFrame .topic,
#offFrame .description,
#offFrame a,
#offFrame .date span {
    color: var(--color-text);
}

#offFrame #projectTitle {
    min-height: 5rem;
    padding-bottom: 1rem;
    border-bottom: 1px solid var(--color-text);
}

body.openedOffWindow nav#iconav {
    transform: translate(0, 0);
}

body.openedOffWindow #windowFrame {
    transform: translate(0, 5vh);
}

body.openedOffWindow #offFrame {
    transform: translate(0, 0vh);
}

@media (min-width: 54rem) {
    body.openedOffWindow nav#iconav {
        transform: translate(300px, 0);
    }

    body.openedOffWindow #windowFrame {
        transform: translate(300px, 0);
    }

    body.openedOffWindow #offFrame {
        transform: translate(0, 0);
    }
}

#offFrame>div {
    padding: 1em;
    margin: 1em;
    border: 1px solid var(--color-text);
}

#offFrame .date svg,
#offFrame .topic svg,
#offFrame a svg {
    width: 1em;
    height: 1em;
    margin-right: 0.25em;
    fill: var(--color-text);
}


#offFrame div a:hover {
    color: var(--color-primary) !important;
}

#offFrame>div>a {
    text-decoration: none;
}

#offFrame a span {
    color: inherit;
}

#offFrame p.description {
    font-size: 1.2em;
}

#offFrame>div>a {
    display: block;
    margin: 0 0 1em 0;
}

button,
label,
input[type='text'] {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
        Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
        'Segoe UI Symbol';
    font-size: 1em;
    text-align: center;
    box-sizing: border-box;
}

input[type='range'] {
    padding: 1em;
}

label {
    margin-top: 1em;
}

#interactiveParameter {
    display: flex;
    flex-flow: column nowrap;
    padding: 1em 1em 3em 1em;
}

